# AI-Native-V5

./: .gitignore  CLAUDE.md  ONBOARDING.md  Pautas_para_autores_CONAIISI_A4_2025.doc  PlanMejora.md  README.md  comoHacer.docx  comparacion.md  gaby.docx  informeSoc.md  informeSocra1.md  paper_conaiisi.txt  paquete-coordinacion-intercoder-2026-05-20.md  plan1Socra.md  revision-coautoral-instrumentos-2026-05-20.md  revision-coautoral-paper-2026-05-16.md  tesis16mayo.docx  trayectoria.docx
AI-NativeV3-main/: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  PRODUCT.md  README.md  biome.json  caccic.md  conftest.py  disto1.docx  disto2.docx  package.json  pnpm-lock.yaml  ppcona.docx  pyproject.toml  turbo.json
AI-NativeV3-main/.claude/: settings.json
AI-NativeV3-main/.github/: dependabot.yml  pull_request_template.md
AI-NativeV3-main/.github/workflows/: ci.yml  deploy.yml  e2e-smoke.yml
AI-NativeV3-main/ai-native-prompts/: manifest.yaml
AI-NativeV3-main/apps/academic-service/: .env.prod.example  Dockerfile  README.md  alembic.ini  pyproject.toml
AI-NativeV3-main/apps/ai-gateway/: .env.prod.example  Dockerfile  README.md  pyproject.toml
AI-NativeV3-main/apps/analytics-service/: .env.prod.example  Dockerfile  README.md  pyproject.toml
AI-NativeV3-main/apps/api-gateway/: .env.prod.example  Dockerfile  README.md  pyproject.toml
AI-NativeV3-main/apps/classifier-service/: .env.prod.example  Dockerfile  README.md  alembic.ini  pyproject.toml
AI-NativeV3-main/apps/content-service/: .env.prod.example  Dockerfile  README.md  alembic.ini  pyproject.toml
AI-NativeV3-main/apps/ctr-service/: .env.prod.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
AI-NativeV3-main/apps/evaluation-service/: Dockerfile  README.md  alembic.ini  pyproject.toml
AI-NativeV3-main/apps/governance-service/: .env.prod.example  Dockerfile  README.md  pyproject.toml
AI-NativeV3-main/apps/integrity-attestation-service/: README.md  pyproject.toml
AI-NativeV3-main/apps/tutor-service/: .env.prod.example  Dockerfile  README.md  pyproject.toml
AI-NativeV3-main/apps/web-admin/: README.md  index.html  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1776729678826-35a821725f8df.mjs
AI-NativeV3-main/apps/web-landing/: index.html  package.json  tsconfig.json  vite.config.ts
AI-NativeV3-main/apps/web-student/: README.md  biome.json  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vite.config.ts.timestamp-1776729678824-954073097c3568.mjs
AI-NativeV3-main/apps/web-teacher/: README.md  biome.json  index.html  package.json  vite.config.ts  vite.config.ts.timestamp-1776729678848-f01049555b24c.mjs
AI-NativeV3-main/docs/: CAPABILITIES.md  EASYPANEL-DEPLOY.md  FASE1-SERVICIOS.md  FASE2-CONEXIONES.md  FASE3-RESILIENCIA.md  FASE4-INTEGRIDAD.md  FASE5-CARGA.md  MAPA-DEPLOY.md  NUEVA-MEDICION-SUBGRUPOS.md  PLAN-AUDITORIA-RESILIENCIA.md  SESSION-LOG.md  VPS-DEPLOY.md  architecture.md  auth-clerk-gateway-plan.md  filtrado-teacher-plan.md  limitaciones-declaradas.md  onboarding.md
AI-NativeV3-main/docs/adr/: 001-multi-tenancy-rls.md  002-keycloak-iam-federado.md  003-separacion-bases-logicas.md  004-ai-gateway-propio.md  005-redis-streams-bus.md  006-fastapi-sqlalchemy.md  007-react-tanstack-frontend.md  008-casbin-autorizacion.md  009-git-fuente-prompt.md  010-append-only-clasificaciones.md  011-pgvector-rag.md  012-monorepo-pnpm-uv.md  013-opentelemetry-observabilidad.md  014-docker-k8s-deployment.md  015-blue-green-rolling-deploy.md  016-tp-template-instance.md  017-ccd-embeddings-semanticos.md  018-cii-evolution-longitudinal.md  019-guardrails-fase-a.md  020-event-labeler-n-level.md  021-external-integrity-attestation.md  022-tanstack-router-migration.md  023-override-temporal-anotacion-creada.md  023-sensitivity-analysis.md  024-prompt-kind-reflexivo-runtime.md  025-episodio-abandonado-beforeunload-timeout.md  026-boton-insertar-codigo-tutor.md  027-g3-fase-b-postprocesamiento.md  028-desacoplamiento-instrumento-intervencion.md  029-bulk-import-inscripciones.md  030-deprecate-enrollment-service.md  031-audit-aliases-ctr.md  032-g7-ml-alertas-predictivas-baseline-individual.md  033-sandbox-pyodide-only-piloto-1.md  034-test-cases-jsonb-en-tp.md  035-reflexion-privacy-exclusion-classifier.md  036-tp-gen-caller-academic-service.md  037-governance-ui-read-only.md  038-byok-aes-gcm-master-key-env.md  039-byok-resolver-jerarquico.md  (+17 more)
AI-NativeV3-main/docs/golden-queries/: programacion-2.yaml
AI-NativeV3-main/docs/phases/: F0-STATE.md  F1-STATE.md  F2-STATE.md  F3-STATE.md  F4-STATE.md  F5-STATE.md  F6-STATE.md  F7-STATE.md  F8-STATE.md  F9-STATE.md
AI-NativeV3-main/docs/pilot/: PRE_FLIGHT_CHECKLIST.md  README.md  kappa-workflow.md  (+10 more)
AI-NativeV3-main/documentos/: Tesis4.docx  protocolo-piloto-utn (2).docx
AI-NativeV3-main/examples/: unsl_onboarding.py  utn_onboarding.py
AI-NativeV3-main/infrastructure/: docker-compose.dev.yml  docker-compose.prod.yml  env.prod.example  frontends.Dockerfile  htpasswd  nginx-frontends.conf
AI-NativeV3-main/scripts/: backup.sh  check-claude-md.py  check-health.sh  check-rls.py  check-staging-stability.sh  check-vite-seed-sync.py  clustering-coherences.py  dev-start-all.sh  dev-start-direct.sh  dev-stop-all.sh  dev-use-copilot-api.sh  docker-safe-prune.sh  eval-retrieval.py  export-rag-content.sh  factorial-analysis-coherences.py  g8a-sensitivity-analysis.py  generate-service.sh  generate_frontends.py  generate_python_services.py  import-rag-content.sh  migrate-all.sh  reclassify-legacy-106.py  reindex-content-embeddings.py  reset-to-seed.sh  restore.sh  screenshot-frontends.mjs  screenshot-internal.mjs  seed-3-comisiones.py  seed-demo-data.py  seed-ejercicios-piloto.py  seed-instrumentos-respuestas.py  seed-instrumentos-utn-cohorte-30.py  seed-smoke.py  seed-utn-prog1-cohorte-30.py  seed-utn-vps.py  seed-video-ejercicio.sql  seed_ejercicios_p6_funciones.py  select-intercoder-corpus.py  sensitivity-analysis-cognitive-coherences.py  setup-dev-permissions.sh  (+9 more)
(+728 files in other folders)
