[project]
name = "platform-content-service"
version = "0.1.0"
description = "Ingesta de materiales (PDF, Markdown, código) + retrieval RAG"
requires-python = ">=3.12,<3.13"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "redis>=5.0",
    "structlog>=24.4",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27",
    "platform-contracts",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "pypdf>=4.3",
    "boto3>=1.34",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "testcontainers[postgres]>=4.8",
    "platform-test-utils",
]

# Dependencias pesadas opcionales.
# Para tests rápidos usar EMBEDDER=mock RERANKER=identity y no hace falta instalarlas.
[project.optional-dependencies]
local-models = [
    "sentence-transformers>=3.0",
    "torch>=2.2",
]
unstructured = [
    "unstructured[pdf]>=0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/content_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests que requieren testcontainers",
]
